@@ -1,3 +1,6 @@
+rev 475 (2017-07-18) (krueschan)
+- added logging of calculator settings to ../sessions/param_log.txt file on each call of the calculator engine
+
 rev 474 (2017-03-02) (krueschan)
 - temporarily reverted to jQuery UI version 1.9.2 because it's the most recent version with which the UI pop up for displaying helptext works
 
